cpu寄存器与指令周期

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -910,6 +910,102 @@
             - 因此我们需要设置标识，用于标记指令周期的子阶段，以便控制器发出读/写控制命令，完成各阶段中特定寄存器与存储器之间的数据交换
             - ![](figure/c8-9.jpg)
 
+    - 8.3.2 指令周期的数据流
+        - 取指周期数据流
+            - ![](figure/c8-10.jpg)
+            - 如图PC中保存了下一条要取的指令地址，PC将地址送入MAR，传输到地址总线上
+            
+            - 存储器获取地址信号，在CU读取信号控制下，读取相应内存单元中的指令，经数据总线送入MDR中
+            
+            - MDR再将指令送入IR中进行解码，CU控制PC自加1指向下一条指令地址
+        - 间址周期数据流
+            - ![](figure/c8-11.jpg)
+            - 如果指令采用了间接寻址，可以加入间址周期来寻访操作数地址
+
+            - 进入间址周期前，由于进行了指令的读取，因此IR和MDR中都有指令的地址码，本例中以MDR将地址码送入MAR（也可由IR送入）
+            
+            - MAR接受地址码后，将地址信号送入地址总线，存储器接收地址信号再经CU读控制信号，将操作数的地址数据，经地址总线送入MDR中
+        - 中断周期数据流
+            - 如果检测到了中断请求，并进行中断响应，中断周期内需要进行的操作依次是：保存程序断点，形成中断程序入口地址，关中断（停止中断请求的发送）
+            - ![](figure/c8-12.jpg)
+            - 由CU确定程序断点需要保存的地址，将地址填入MAR，经地址总线送入存储器，同时CU发出写操作命令
+
+            - 程序断点就是当前要执行的下一条指令地址，即PC中的数据，因此PC将指令地址送入MDR，经数据总线写入存储单元
+            
+            - 中断程序的入口地址由CU确定并写入PC中
+
+- 8.3 指令流水
+    - 指令流水技术是现代计算机中最常用的提高指令解释速度的方法
+    - 对于访存速度的提升，我们可以使用高速芯片，架设多层Cache，对存储芯片交叉编址多体并行访问
+    
+    - 对于I/O与主机之间的传输速度，从串行，到中断请求，再到DMA I/O处理及，我们不断提升I/O系统的自治能力，解放CPU
+    
+    - 对于运算器速度的提示，除了使用高速芯片外，还可改进算法，使用快速进位链
+    
+    - 而对于整机的处理能力提升，除了使用高速器件外，我们可以改进计算机系统结构，开发系统的并行性
+    - 8.3.1 系统的并行性
+        - 过程级（程序、进程）上的并行是粗粒度的并行，通常使用软件实现
+
+        - 而指令级，指令之间，指令内部（微指令）的细粒度并行，则需要硬件实现
+    - 8.3.2 指令流水的基本原理
+        - 如图我们给出一个6级指令流水，假设每一段时间都是相同的
+
+        - 各段执行的操作为：FI（取指令）DI（指令译码）CO（间址寻址）FO（取操作数）EI（执行指令）WO（结果写回）
+        - ![](figure/c8-13.jpg)
+
+    - 8.3.3 影响指令流水的因素
+        - 1.执行时间>取指时间
+            - 这种情况下并行的取指操作已经完成，然而执行部件还未做完上一条指令的操作
+            - 对此一个解决方法是加设指令缓冲区，采用指令预取技术
+        - 2.条件转移指令/控制相关
+            - 对于条件转移指令，必须等待上一条指令运行结果，进行判定才能确定下一条指令的地址，为此便会造成损失
+            - 如果发现条件转移指令，比较稳定的方法时全部流水的暂停，转为串行，等待结果，判定转移，为此便会造成时间的损失
+            - 如果仍正常进行流水，则一旦运行结果判定发生转移，则并行期间就执行了大量的无效指令，需要大量的清理重置操作，并转移到相应的指令重开并行处理
+
+        - 3.结构相关
+            - 流水中，同一周期内，不同指令的执行阶段争用同一 功能部件/资源 产生冲突
+            - 如图标为蓝色的部分，FO取操作数、FI取指令、WO写回结果都需访存因而产生冲突
+            - ![](figure/c8-14.jpg)
+            - 常见的解决方法是加入停顿/气泡，发生争用时高优先级阶段获得资源低优先级被迫等待，到下一周期再继续执行
+
+            - 针对访存冲突，我们可以将指令存储器和数据存储器分离（哈佛结构），如果取指令访存周期较短，可结合缓存采用指令预取技术，在空闲时读入多条指令到缓存中待用
+        - 4.数据相关
+            - 不同指令重叠操作，可能改变操作数的读写访问顺序
+            - 如图我们可区分出三种读/写相关次序
+            - ![](figure/c8-15.jpg)
+            - 在流水并行时，我们需要保证运行结构与串行相同，分析并行阶段次序的重叠嵌套，实际只有RAW在读/写次序改变时，会影响运算结果
+
+    - 8.3.4 流水线性能描述
+        - 吞吐量
+            - 单位时间内流水线所完成指令/输出结果的数量，吞吐量分为最大吞吐和实际吞吐
+
+        - 加速比
+            - m段的流水线速度与等功能的非流水线的速度之比
+
+    - 8.3.5 基于指令流水进一步提升效率的方法
+        - 超标量技术
+            - 在流水线的基础上，我们可以布置多条流水线，在一个时钟周期内，可以有多条指令进入到不同的流水线中执行
+
+            - 为了布置多体条流水据需要我们配置多个功能部件，并通过编译优化将能够并行执行不发生冲突的指令筛选出来
+            
+            - 如图我们布置了三条流水，同一周期内可开启三条指令并行执行，从而流水线吞吐量能提升三倍
+            - ![](figure/c8-16.jpg)
+
+        - 超流水技术
+            - 我们可以将一个时钟周期/一个流水段再进行细分，从而一个流水内同一个功能部件可多次被使用，也能达到同一周期并发多条指令的效果
+            - 在流水线的设计中，我们需要在各阶段间加入锁存器，将上一阶段执行的结果锁存，作为下一流水段执行时的输入数据/控制信号，而超流水技术中，一个周期内的细分段之间不会使用锁存器，因此一个关键的技术是保证处于统一阶段中的不同指令，不发生信号的叠加
+            - ![](figure/c8-17.jpg)
+        - 超长指令字技术
+            - 由编译程序找到能够并行执行的多条指令，并将多条指令操作组合为一条超长的（可达几百字节）指令字
+
+    - 8.3.6 流水线的结构与设计
+        - 指令流水线结构
+            - 指令流水的设计是将一个指令周期中，从取指，译码执行到保存结构的一整个过程划分为多个子阶段，通常划分为图中的6阶段，并交由不同的部件进行独立执行
+            - 这样的划分子阶段和各阶段由独立的部件独立完成，是构建流水线的基础，此外各阶段之间需要通过锁存器用于保存前一流水段的执行结果，为转交到下一阶段由另一部件执行提供引启/数据输入
+            - ![](figure/c8-18.jpg)
+        - 运算流水线
+            - ![](figure/c8-19.jpg)
+
 
 
 
