--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1006,7 +1006,117 @@
         - 运算流水线
             - ![](figure/c8-19.jpg)
 
+- 8.4 中断系统
+    - 8.4.1 引发中断的因素
+        - 1.人为设置的中断，用于程序调试，例如转管指令转入管理程序
+        
+        - 2.程序性事故，溢出，操作码无法识别，除法非法等
+        
+        - 3.硬件故障，例如存储器无法写入，磁盘坏道，CPU过热，电源掉电
+        
+        - 4.I/O设备输入输出处理
+        
+        - 5.外部事件，例如键盘中断现行程序
+    - 8.4.2 中断请求标记
+        - 通过INTR触发器来标记中断请求，一个请求源对应一个触发器
+        - 多个INTR触发器就组成了中断请求标记寄存器，触发器的每一位都对应一种异常
+        - ![](figure/c8-20.jpg)
+        - INTR可分散在各个中断源的接口电路中，也可以集成在CPU的中断系统电路中
 
+    - 8.4.3 中断判优逻辑
+        - 中断判优逻辑为解决同一周期内接到多个中断源的中断请求时，如何确定优先级最高的一个并响应
+        - 现代计算机中大多数中断判优都是通过硬件排队电路实现的，在系统总线章节中我们已经介绍了链式排队器，中断判优亦可使用这样的硬件电路实现
+        - 如图一个简单的判优电路逻辑展示，从INTR1到INTR4优先级降序排列，四个请求源各自提出申请时，只会在优先级最高位上产生1的输出，其余各位均是0
+        - ![](figure/c8-21.jpg)
+        - 中断判优也可以通过程序查询的方式实现（软件实现），逻辑框图如下
+        - ![](figure/c8-22.jpg)
+    - 8.4.4 确定中断服务程序入口地址
+        - 对于需要响应的中断源，我们需要寻找中断服务程序的入口地址
+        - 一种方式是通过I/O接口中提到的硬件向量法，对排队器输出解码生成向量地址，我们在向量对应的内存单元中存放一条指向中断服务程序入口的跳转指令，也可以直接存放入口地址数据，取出后送往PC中并开启程序执行
+        - ![](figure/c8-23.jpg)
+        - 另一种方法是通过软件查询法，即执行中断识别程序
+        - 中断识别程序可以与中断判优程序结合，如下图所示
+        - ![](figure/c8-24.jpg)
+            - 如图程序能在判优的同时，确定入口
+    - 8.4.5 中断响应
+        - 中断响应的条件和时间
+            - CPU并不是任何时间都能响应中断请求，CPU中会使用EINT允许中断触发器标记当前是否能接受中断请求
+            
+            - 对于只允许单中断的系统，CPU会在进入中断服务程序后，硬件关中断，将EINT恒置0
+            
+            - 在正常执行程序中，指令周期的末尾CPU才会发出查询信号，将INTR输出端置1，所有INTR输出由排队电路判优，决定是否有中断请求，需要响应的最高优先中断请求
+        - 中断隐指令
+            - 在响应中断时，硬件自动执行一些列操作，包括：
+            
+            - 1.保护程序断点，将PC中原先下一条将要执行的指令地址写入到存储器某个特定的地址下（单中断），或是通过压栈的方式保存（多中断）
+            
+            - 2.寻找服务程序入口地址，前面已经详细讲到了
+            
+            - 3.硬件关中断，将EINT触发器置0，不在接受中断请求，单中断将在从中断服务程序返回前恒置0，而多中断系统会在进入中断服务程序后重置1允许更高优先级中断源再次中断形成嵌套
+            
+            - 这些操作并不对应上层程序编写中的某条指令，而是由硬件自动完成的
+    - 8.4.6 保护现场和恢复现场
+        - 对于现场的保护分为两部分
+    
+        - 程序断点的保存/隐寄存器内容的保存都有中断隐指令自动完成
+        
+        - 而对于上层可见寄存器的内容，如果中断服务程序中需要使用这些寄存器，则需要由中断服务程序在开始时先保存原因内容
+        对于现场的恢复/中断返回由中断服务程序在末尾完成
+        中断服务程序的功能如图
+        - ![](figure/c8-25.jpg)
+
+    - 8.4.7 多重中断
+        - 多重中断指在中断服务程序执行的过程中，允许响应更高优先级的中断源，从而形成中断服务程序的嵌套
+        - 这需要我们在进入中断服务程序后，设置开中断指令，并查询是否有更高优先级别的中断请求
+        - ![](figure/c8-26.jpg)
+    - 8.4.8 中断屏蔽技术
+        - 可以通过设置中断屏蔽字，屏蔽掉特定的中断源，改变中断响应的优先级，从而提高中断系统设计的灵活性
+        - 中断屏蔽触发器
+            - 如图是针对单个INTR，设置MASK中断屏蔽触发器的电路
+            - ![](figure/c8-27.jpg)
+            - 触发器D是设备完成工作信号，这个信号和MASK非，与操作，输入到INTR触发器的D端
+            - 当MASK置1时，INTR D端输入恒为0，导致CPU查询信号不会查询到中断请求
+            - 中断屏蔽器也可以结合链式排队电路设置，如图
+            - ![](figure/c8-28.jpg)
+
+            - 同样的当MASK置1时，INTR向排队电路的输入恒为0，相当于无法发出中断请求，不参与排队
+        - 屏蔽字
+            - 我们将所有INTR对于的屏蔽触发器的设置值综合起来，就形成了屏蔽字，代表了对中断请求寄存器每一位是否设置屏蔽
+            - 在多重中断时，中断响应的硬件排队电路形成了原屏蔽字如图所示
+            - ![](figure/c8-29.jpg)
+            - 如图1置16中断源优先级降序排列，屏蔽字置1代表不允许发送中断请求，多重中断时默认按照硬件排队电路的响应顺序，比较高低优先级，形成了原屏蔽字
+            - 硬件排队电路对应的响应优先级，原屏蔽字是上层机器语言编写者不能改变的
+            - 但可以在进入某个中断服务程序后，通过设置新屏蔽字，来改变处理优先级（默认处理优先级等同于响应优先级）
+            - 以ABCD四中断源为例，原屏蔽字和新屏蔽字如图
+            - ![](figure/c8-30.jpg)
+            - 从原屏蔽字我们可以看出，响应优先级 A>B>C>D 这是固定的
+            - 右侧新屏蔽字会在进入到ABCD四个中断服务程序后设置
+            - 从而处理优先级就变为了 A>D>C>B
+            - 如果我们不设置新屏蔽字，则按响应优先级作为处理优先级，当ABCD同时发送中断请求时处理进程如图
+            - ![](figure/c8-31.jpg)
+            - 按表格设置新屏蔽字，当ABCD同时发送中断请求后，形成中断嵌套，处理进程如图
+            - ![](figure/c8-32.jpg)
+            - 主程序按照响应优先级先开启A中断服务，并且A屏蔽字设置同原屏蔽字，BCD无法打断
+            - 处理完成后返回主程序，按响应优先开启B，B设置新屏蔽字，C处理优先级高，打断B，开启C
+            - C再设置新屏蔽字，D处理优先级高，打断C，开启D（此时形成三重嵌套）
+            - D处理完成后返回C，C处理完成返回B，B处理完成返回主程序
+            
+            - 多重中断，加入屏蔽字设置，中断服务程序总进程顺序如图
+            - ![](figure/c8-33.png)
+
+    - 8.4.9 程序断点的保护
+        - 多重中断中中断隐指令会自动完成程序断点的保存，主要是将PC值保存
+
+        - 可以通过压栈的方式进行存储，通过栈的特性也能很好的适应中断嵌套
+        
+        - 如果是讲断点存入某个特定的地址，就需要考虑多重中断中，多次写入时如何保证断点的不丢失
+        
+        - 如图假设进入中断服务程序前A，主程序断点默认保存在0地址，如果要进行再次中断，就需要转存0地址的内容，随后覆盖0地址为A的断点
+        
+        - 中断服务程序再次中断时都会对0地址进行转存，随后覆盖为自己的断点地址，从而就保证了断点不会因重复写入而丢失
+        
+        - 每层中断返回前会判断是否被再次中断过，若没有跳转到0地址，若再次中断过，则跳转为转存地址
+        - ![](figure/c8-34.jpg)
 
 
 
