--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1118,6 +1118,163 @@
         - 每层中断返回前会判断是否被再次中断过，若没有跳转到0地址，若再次中断过，则跳转为转存地址
         - ![](figure/c8-34.jpg)
 
+# 第九章 控制单元
+- 9.1 微操作命令的分析
+    - 控制单元CU最主要的功能就是解码指令，并发出控制信号
+
+    - 在第八章中，我们已经了解过，一条指令的执行（指令周期），可分为四个子阶段（取指、间址、执行、中断）
+
+    - 在这四个子阶段中，控制单元需要发出一些列控制信号，控制各个部件进行一些列的微操作，从而执行完一条指令
+
+    - 下面我们就来分析一下这四个子阶段中的微操作命令
+        - 取指周期
+            - ![](figure/c9-1.jpg)
+            - 首先下一条指令的地址数据经过 PC-->MAR-->地址总线-->存储器(MAR) 的传递
+
+            - 存储器接收地址后，CU通过数据总线发出读命令
+            
+            - 从而下一条指令的代码经过 存储器(MDR)-->数据总线-->MDR-->IR 读取到CPU中
+            
+            - 随后CU控制IR将操作码传递给自己，进行操作译码
+            
+            - PC在CU的控制下自加1指向下一条指令地址
+        - 间址周期
+            - ![](figure/c9-2.jpg)
+            - 如果使用了间接寻址，则需要在执行周期前进行间址寻访，将地址信息送入到IR中
+
+            - 在CU的控制下：
+            
+            - 操作数地址经过 IR/MDR-->MAR-->地址总线-->存储器(MAR) 的传递（注意IR和MDR此时都保存了操作数地址，因此可以从其一取出地址送往MAR）
+            
+            - 存储器接收，CU通过控制总线发出读命令
+            
+            - 操作数地址数据再经过 存储器(MDR)-->数据总线-->MDR-->IR(Ad)
+            
+            - 从而最终IR获取到操作数的地址
+        - 执行周期
+            - 相较于操作较为固定的取指和间址周期，执行周期的操作较为复杂多变
+            
+            - 不同的指令译码后对应执行周期不同的微操作
+            
+            - 非访存类指令，一般是对ACC的直接操作，由CU控制完成，例如清0指令就是CU将0写入到ACC的所有位，左移右移取反由CU启用ACC连接的对应电路完成
+            
+            - 对于访存类指令，这里以RISC一地址指令为例
+                - 加法指令（ADD X）
+                    - 取出内存中的一个加数与ACC寄存器中的另一个加数相加
+
+                    - 操作数(加数)地址传输 IR/MDR-->MAR-->地址总线-->存储器(MAR)
+                    
+                    - 随后CU通过数据总线发出读命令
+                    
+                    - 操作数数据传输 存储器(MDR)-->数据总线-->MDR-->X(ALU)
+                    
+                    - 之后CU向ALU给出加法指令，将ACC与X相加结果保存在ACC中
+                - 存数指令（STA X）
+                    - 保存当前ACC中的数据到IR的地址下则：
+    
+                    - 地址传输 IR-->MAR-->地址总线-->存储器(MAR)
+                    
+                    - 随后CU通过数据总线发出写命令
+                    
+                    - 数据传输 ACC-->MDR-->数据总线-->存储器(MDR) 完成写入
+                - 取数指令（LOD X）
+                    - 将IR给出地址位置的操作数取到ACC中
+    
+                    - 操作数(加数)地址传输 IR-->MAR-->地址总线-->存储器(MAR)
+                    
+                    - 随后CU通过数据总线发出读命令
+                    
+                    - 操作数数据传输 存储器(MDR)-->数据总线-->MDR-->ACC 完成读取
+                - 转移指令
+                    - 直接转移IR给出的地址码就是转入程序的首地址码
+
+                    - 而间接跳转（类似间址寻址），则执行阶段之前的间址周期会读取对应的地址送入到IR中
+                    
+                    - 因此转移指令执行时，IR中已经保存好了需要转移到的指令地址
+                    
+                    - 无条件转移指令 只需将IR给出地址码送入到PC中，随后继续下一个指令周期即可
+                    
+                    - 条件转移指令则需要根据指令码，启用对应的逻辑判定电路（通常是对ACC进行判定），根据反馈信息，加载对应地址的操作码到PC中，或是不进行跳转，继续执行下一条指令
+        - 各类指令的周期分段
+            - 一般指令都具有取指和执行阶段
+            - 部分使用间接寻址的指令，会在执行阶段前的间址周期完成间接寻址，并将所需的地址送入到IR中
+            
+            - ![](figure/c9-3.jpg)
+        - 中断周期
+            - 这里讨论当需要进入到中断服务程序时，硬件隐指令所对应的微操作
+
+            - 首先要保存程序断点，可以通过压栈或是写入到内存中的“0”地址（特定地址）两种方法
+            
+            - 对于写入“0”地址，首先CU将特定的地址填入MAR中经地址总线传输给存储器
+            
+            - 对于压栈保存，我们将SP地址值-1，指向栈顶空位，送入MAR中经地址总线传输给存储器
+            
+            - CU通过控制总线发出写命令，PC中的程序断点送入MDR中，经数据总线写入到存储器中
+            
+            - 随后通过硬件向量法，或是执行查询程序，形成中断服务程序地址送入到PC中
+            
+            - 最后硬件关中断，将EINT触发器置0
+
+- 9.2 控制单元的功能
+    - 控制单元的功能即发出各种命令/微指令，控制CPU内部以及整个计算机系统，能够协调稳定正确连续的运行
+    - 9.2.1 控制单元的外特性
+    - ![](figure/c9-4.jpg)
+    - 控制信号需要在时钟信号的调制下，每个时钟周期内完成相应的操作
+    - 一些逻辑判断的结果会作为标值信号输入到CU内部，作为条件命令除法的依据
+    
+    - 输入信号
+        - 1.时钟信号 CU受时钟信号调制，在一个时钟脉冲中发出一个或一组特定的操作命令
+    
+        - 2.指令寄存器 OP（IR）会将指令的操作码送往CU解码指向
+        
+        - 3.标志 逻辑判断的结果作为标志信号送往CU
+        
+        - 4.外来信号 指来自CPU外部计算机系统中的其它信号 例如 INTR中断请求 HRQ总线请求
+    - 输出信号
+        - 1.CPU内部的各种控制信号
+        
+            - 包括各种部件之间的数据传输，PC自加1，控制ALU进行算术/逻辑运算，启用ACC的左移右移，取反操作
+        
+        - 2.送往控制总线的信号
+        
+            - 用于控制计算机系统中的其它部件，例如存储器读写控制，I/O访问，中断响应，总线响应
+    - 9.2.2 控制链路
+        - CPU内部不采用总线方式
+        - ![](figure/c9-5.jpg)
+        - 采用总线
+        - ![](figure/c9-6.jpg)
+            - 对于ALU，ACC和Y寄存器作为输入，Z寄存器作为输出结果，以加法指令为例，取到的加数会从MDR中传入Y，之后ACC与Y向ALU输入，CU发出加法控制信号，ALU将结果输出至Z寄存器，最后Z寄存器在将结果送入ACC
+    - 9.2.3 多级时序系统
+        - 机器周期/CPU周期
+            - 机器周期是指令周期的子阶段（取指、间址、执行）执行的一个基准时间，这些子阶段都需要在一个机器周期内完成各种微操作（前面已经进行了分析）
+            - 机器周期的确定，需要考虑每条指令所需的阶段执行步骤所需的时间，电路延迟等等因素，通常以最复杂子阶段（通常具有访存相关操作）的时间为准，若指令字长等同于存储字长，可默认取指周期等于机器周期
+
+        - 时钟周期/时钟节拍
+            - 在一个机器周期中我们还需进行各种微操作，从而完成子阶段的任务，这些微操作的执行便受到时钟周期/时钟节拍的调制，保证有序的执行
+            - 时种周期是计算机内部最基本的离散时间单元，是控制计算机操作的最小时间单位，每个微操作的执行最少需要一个时钟周期，多则数个时钟周期
+            - 一个时钟周期内只进行一套串行操作中唯一的一个操作，所执行的多个微操作必然是不同线路（流水分段）中并行的
+            - 通过时轴周期信号我们会生成节拍信号，一个机器周期便是若干个节拍的组合，通过不同的节拍来控制相应的操作信号有序发出和执行
+            - ![](figure/c9-7.jpg)
+            - 时钟脉冲CLK是由CPU内部统一发出的，并通过总线发送至整个计算机系统（CPU外部使用的时钟频率称外频，内部的时钟频率称主频，由于电路的延迟，外频要慢于主频）
+        - 多级时序系统
+            - 一个指令周期包含多个机器周期，一个机器周期包含多个时钟节拍，一个时钟节拍又是通过一个或多个时钟脉冲产生的
+            - ![](figure/c9-8.jpg)
+
+    - 9.2.4 机器速度与主频的关系
+        - 主频是1s内所经历的时钟周期/时钟脉冲的次数，或者说是时轴周期的倒数
+        - 由于微操作完成受时轴周期的调制，因此主频一定程度上能反应机器速度
+        - 但机器速度不仅与主频有关，还与流水模式，机器周期中所含时钟周期数/节拍数，以及指令周期中所含的机器周期数，传输延迟等等因素有关，机器速度与主频并不是线性对应关系
+        - 但在其它各方因素相同的情况下，机器的平均执行速度之比，等于时轴周期反比，等于主频之比
+    - 9.2.5 控制方式
+        - 控制方式即产生微操作命令序列所用的时序控制方式
+        - 同步方式
+            - 定长机器周期
+            - ![](figure/c9-9.jpg)
+            - 不定长机器周期   
+            - 中央控制于局部控制相结合
+        - 异步控制方式
+        - 联合控制方式
+        - 人工控制方式
 
 
 
