chapter 10 控制单元的设计 finish

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1277,6 +1277,151 @@
         - 人工控制方式
 
 
+# 第十章 控制单元的设计
+- 将分别介绍RISC的组合逻辑和CISC的微程序两种控制单元的设计实现方法
+
+- 10.1 组合逻辑设计
+    - 10.1.1 CU外特性
+        - ![](figure/c10-1.jpg)
+        - 输入信号：
+            - CLK机器主频连接节拍发生器生成的节拍信号输入到CU，
+            - IR将指令操作码送入译码器译码，对应的输入线路中只有一条线路为高电平表示所需的指令操作
+            - 来自逻辑运算得到的各种标志信号
+        - 输出信号：
+            - 在节拍信号的调制下，每个节拍内CU会输出一个或多个可以并行执行的控制信号
+    - 10.1.2 微操作的节拍/时序的安排
+        - 这里采用同步控制的方式，一个机器周期内3个节拍，CPU内部采用非总线连接方式为例
+        - 微操作节拍/时序安排的原则
+            - 原则一，微操作的先后顺序不得随意修改
+            - 原则二，对于不同对象，能够并行执行的不同微操作，尽量安排在一个节拍内完成
+            - 原则三，占用时间较短的多个微操作尽量按序组合在一个节拍内完成
+        
+        - 取指周期微操作节拍安排
+            - ![](figure/c10-2.jpg)
+                - T0周期中，PC指令地址值送往MAR上传地址总线与发出读控制命令是可以独立并行的，因而被安排在一个周期
+
+                - T1周期中，存储体内部通过MAR地址信息读取数据传入MDR上传数据总线，以及PC值自加一可以独立并行
+
+                - T2周期中，CPU内部MDR接收到指令信息传入IR，与IR向译码器提交指令操作码这两个操作需要先后完成，但所需时间较短，因而安排在一个周期
+        - 间址周期微操作节拍安排
+            - ![](figure/c10-3.jpg)
+        - 执行周期微操作节拍安排
+            - 执行周期根据指令的不同需要进行特定的操作，而取指和间址则是完全相同的
+
+        - 零地址指令
+            - ACC清0（CLA）
+                - ![](figure/c10-4.png)
+                - 只需将0填入ACC即可
+            - ACC按位取反（COM）
+                - 启用对应的取反电路
+            - 右移操作（SHR）
+                - 启用对应的电路右移，向右覆盖符号位写回
+            - 循环右移（CSL）
+                - 启用对应的电路，向右覆盖，高位置于末位
+            - 停机（STG）
+                - 将停机标识置0即可
+
+        - 一地址访存操作   
+            - 累加X与ACC（ADD X）
+                - ![](figure/c10-6.jpg)
+                - T0 IR/MDR将操作数地址送入MAR上传地址总线，CU通过控制总线向存储器发出读命令
+
+                - T1 存储器接收地址数据，将读出的操作数通过数据总线传入MDR
+                - T2 CU发出一系列控制命令，将MDR和ACC的数值输入到ALU，并发出加法指令，将结果保存至ACC
+            - 保存ACC结果到指定地址（STA X）
+                - ![](figure/c10-7.jpg)
+                - T0 IR/MDR将写入地址送入MAR上传地址总线，CU通过控制总线向存储器发出写命令
+                
+                - T1 ACC将数据送入MDR
+                
+                - T2 MDR数据上传数据总线，存储器接收地址和写控制命令，将数据写入到指定的存储单元
+
+            - 读取操作数到ACC（LOD X）
+                - ![](figure/c10-8.jpg)
+            - 跳转到给定的指令地址（JMP X）
+                - ![](figure/c10-9.jpg)
+                - 无论是直接跳转还是间接跳转，执行周期，需要转入的指令地址已经被保存在IR/MDR中
+            - 条件跳转（BAN X）
+                - ![](figure/c10-10.jpg)
+
+        - 中断周期微操作节拍安排
+            - 这里是指判定需要开启中断服务时，进行的中断隐指令的微操作节拍安排，包括向“0”地址写入程序断点，硬件关中断，生成中断服务程序入口地址
+            - ![](figure/c10-11.jpg)
+
+    - 10.1.3 组合逻辑的设计步骤
+        - 取指周期
+            - ![](figure/c10-12.jpg)
+            - 如图读取指令的操作是所有指令统一的
+            - CLA清0和COM取反无需间址周期，因而在取指周期T2节拍末直接将EX标识置1，直接进入执行周期
+            - 而其它指令，需要间接寻址，因而将IND标识置1，进入间址周期
+
+        - 间址周期
+            - ![](figure/c10-13.jpg)
+            - 间接寻址的操作是统一的
+            - 间址周期末尾，需要根据取到地址的标识码，决定进入执行周期，还是需要再次间接寻址（这里假设都使用了一次间址）
+        - 执行周期
+            - ![](figure/c10-14.jpg)
+            - 根据表格，我们可以写出每条微操作是否需要执行的逻辑表达式（考虑机器周期标识，节拍标识，指令的不同）
+            - ![](figure/c10-15.jpg)
+            - 通过表达式，我们就可以绘制出逻辑电路图，并根据电路图组合元器件，连接线路进行实现
+            - ![](figure/c10-16.jpg)
+            - 组合逻辑的设计，思路清晰，运行速度快，但需要对于每条指令写出逻辑表达式、实现逻辑电路，在指令较多时，电路庞杂，调试修改困难
+            - 通过组合逻辑设计实现控制器的方法，常用于RISC指令集计算机，或是整形运算单元
+
+- 10.2 微程序设计
+    - 通过组合逻辑设计实现控制器，每一个微操作控制信号都需要单独的电路设计，导致电路庞杂，并且不利于修改和扩展，对此1951年英国剑桥大学Wilkes教授提出了微程序设计的思想
+    - 控制器的工作就是根据不同的指令操作码，在相应的机器周期，相应的节拍下发出控制信号，组合逻辑是通过硬连逻辑电路的方式实现这一特性
+    - 微程序设计的思路则是将控制器所需发出的所有控制信号线路，按位排列起来形成“操作控制字”，通过二进制的0代表低电平，1代表高电平，从而将不同命令不同周期不同节拍下对应控制信号，以一串二进制代码（微指令）的形式保存在存储元件中（ROM），在相应的时机，控制器会根据指令的操作码，获取微指令代码，并根据0/1发出相应的控制信号
+
+    - 一个机器周期内，不同节拍下需要按先后次序运行的多条微指令构成了一个微程序，控制器的每个机器周期都是在运行相应的微程序，通过取指、间址、执行阶段相应的微程序运行实现每条指令的运行，进而实现整个程序的运行
+        - ![](figure/c10-17.jpg)
+        - 微指令在ROM中有序保存，读取时有序运行，一个机器周期内的所有微指令构成一个微程序，取指、间址周期微程序可通用，不同的指令需要编写特定的执行周期微程序
+        - ![](figure/c10-18.png)
+        - 每条微指令操作控制部分对应CU需要发出的控制信号，顺序控制指向下一条微指令地址
+    - 微程序控制单元的基本框图
+        - ![](figure/c10-19.jpg)
+        - 指令操作码进入微地址形成部件，会产生执行阶段对应的微程序首地址，以及是否需要间址周期等其它信息，送入顺序逻辑单元
+        - 顺序逻辑单元，根据标志信息（逻辑标志，机器周期标志），时钟频率/节拍，以及微地址形成信号，产生当前需要执行的微指令地址，送入CMAR寄存器
+
+        - CMAR地址译码后，从控制存储器（ROM）中读出相应的微指令代码，包括操作控制码和下一条指令代码
+
+        - CU按照操作控制码发出相应的控制信号，下地址送入顺序逻辑中，参与生成下一条微指令地址
+
+        - 取指周期末指令的下地址是终止符，是否进入某个微指令对应的执行周期微程序，或是进入间址周期，需要微地址形成部件给出
+        - 而执行周期/中断周期末指令的下地址，均是取指周期的首地址，用于开启下一个指令周期
+
+    - 10.2.1 微指令操作控制的编码方式
+        - 直接编码
+            - ![](figure/c10-20.jpg)
+            - 每一位1/0代表是否发出一个控制信号/微操作命令,这种方式操作控制码与输出信号高低电平直接对应，因而执行速度最快
+        - 字段直接编码方式/显式编码
+            - ![](figure/c10-21.jpg)
+        - 字段间接编码方式/隐式编码
+            - ![](figure/c10-22.jpg)
+        - 混合编码
+    - 10.2.2 微指令格式
+        - 水平型微指令
+            - 即使用直接编码、显式编码、隐式编码，与一次性需要发出的控制型号直接相关，能执行多个并行操作
+            - 水平型微指令并行操作能力强，灵活性强，指令较长无需译码或简单译码，执行速度快，微程序结构短
+        - 垂直型微指令
+            - 即采用类似机器指令操作码的方式，需要复杂的译码操作，执行速度慢，但指令的功能更强，指令字长短，微程序结构长
+    - 10.2.3 微指令序列地址的形成
+        - 1.微指令码的下地址字段指出下一条指令的地址
+        - 2.由于指令码顺序存储，多数情况下可使用增量计数器在首地址上不断加1得到，从而可省略下地址字段
+        - 3.根据机器指令的操作码，经过微地址形成部件译码得到执行阶段对应微程序的首地址
+        - 4.分支转移时，给出转移方式（判定的标志条件），及满足条件时的转入地址
+        - 5.测试网络，另一种条件转移的方法
+        - 6.由硬件产生微程序入口地址，（开机后）第一条微指令的地址由专门的硬件产生
+            - ![](figure/c10-23.jpg)
+
+    - 10.2.4 静态微程序设计和动态微程序设计
+        - 静态微程序即固定的，无需改变的，一次设计完成，写入ROM
+        - 而动态微程序可通过改变微指令/微程序，从而改变机器指令，有利于仿真/测试，采用EPROM存储微程序
+    - 10.2.5 毫微程序设计
+        - （就是套娃）即再用一套毫微指令/毫微程序来解析执行复杂的微指令
+        - 毫微指令与微指令的关系，相当于微指令与机器指令的关系
+
+
 
 
 
