update file sysytem

--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -376,3 +376,28 @@ https://zhuanlan.zhihu.com/p/141602175
 # 计算机组成原理
 
 https://www.bilibili.com/video/BV1ix41137Eu?p=2  计算机组成原理 建模之后再看
+
+
+# 文件系统
+- inode索引节点值是文件的标识，这个值是唯一的，不同的文件的索引节点值是不同的。索引节点值相同的文件它的内容是相同的，
+仅仅文件名不同。修改两个索引节点值相同的文件中的一个文件，另一个文件的内容也跟着发生改变。硬连接就是这个例子，
+ln hello.py hello1.py. 文件名不同，文件内容相同，索引节点值相同。
+- 索引节点值相同，就是互为硬链接。删除一个文件，对其他文件不造城影响。索引节点对每一个文件有一个引用计数，创建硬链接的时候，
+引用计数会+1，当引用计数为0时，系统会删除此文件。目录不能创建硬链接
+- 软连接就相当于我们win中的快捷方式即如果你软连接一个目录只是一个目录的快捷方式到指定位置，操作系统找这个快捷方式会直接找到真实目录下的文件。但是硬连接的话，相当于镜像的方式，你创建一个目录的硬连接之后，操作系统需要把这个目录下所有的文件都要做一次硬连接（复制一份过去）
+- linux的文件系统用一组通用对象来表示，这些对象是超级块(superblock)，节点索引(inode)，目录结构(dentry)，和文件(file)
+    - superblock是每种文件系统的根，用于描述和维护文件系统的状态。
+    
+    - 文件系统中管理的每个对象(文件或目录)在linux中表示为一个索引节点inode，inode包含管理文件系统中的对象所需的所有元数据
+    - dentry用来实现名称和inode之间的映射，有一个目录缓存用来保存最近使用的dentry，dentry还维护目录和文件之间的关系
+
+- 文件描述符
+    - linux下用文件描述符来表示设备文件和普通文件，文件描述符是一个整形的数据，所有对文件的操作都通过文件描述符来实现。
+    - 文件描述符是文件系统中连接用户空间和内核空间的枢纽。当打开或者创建一个文件时，内核空间创建出相应的结构。并生成一个
+    整形变量传递给用户空间的对应进程。进程用这个文件描述符来对文件进行操作。例如用户空间读写一个文件时，将文件描述符作为参数传给read或write。
+    读写函数的系统调用到达内核时，内核解析作为文件描述符的整形变量。找出对应的设备文件运行相应的函数。并返回用户空间结果。
+    
+    - 文件描述符的范围是0～OPEN_MAX，是一个有限的资源，因为使用完毕后要及时释放，通常用close释放。
+    
+- mmap
+    - mmap是一种将文件和地址空间进行映射的方法。映射成功后，可以像操作内存一样对文件内容进行读写。
