--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -121,3 +121,20 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
 - cpu在执行jmp指令短时候 并不需要转移短目的地址 而是转移的位移
 - jcxz为有条件转移指令 cx=0才执行 否则什么也不做
 - loop指令 cx=cx-1 若cx！=0 才转移
+
+# 10. call和ret指令
+- ret指令用栈中的数据，修改ip的值，从而实现近转移
+- cpu执行ret指令时，进行下面两步操作
+    - ip=ss*16+sp
+    - sp=sp+2
+- cpu执行call指令进行两步操作
+    - 将当前的ip或cs和ip压入栈中
+    - 转移 也就是jump到call的地方
+
+- call和ret的配合使用
+    - 用call去执行转移，用ret转移回来call的下一条指令接续执行
+            
+    - ![](figure/callret.png)
+    - 用call和ret结合可以实现多个方法互相连接，实现复杂的功能
+
+      
